endpoint catalogo/trailer/categoria

--- a/views/trailerflix.ejs
+++ b/views/trailerflix.ejs
@@ -1,3 +1,8 @@
+<style>
+    h1{color: red; text-align: center; margin: 1.5rem}
+    div{background-color: rgb(210, 210, 210);
+        color: black; margin-top: 4rem;}
+</style>
 <%- include('./partials/header') %>
 <h1><%= title %></h1>
 <h2> <%= message %></h2>
@@ -11,3 +16,4 @@
 <div class="container">
 </div>
 <%- include('./partials/footer') %> 
+
